tests/negative/other/uninitialized_non_optional.tx
// EXPECTED: COMPILE_ERROR
// Description: Non-optional variables must be initialized at declaration.

function main() {
    let integer: int;
}
